# FR16

./: .gitignore  README.md  benchmark_04_optimized_ik_results.csv
algorithm_benchmark_pkg/: CMakeLists.txt  package.xml
algorithm_benchmark_pkg 02/: CMakeLists.txt  package.xml
algorithm_benchmark_pkg 02/src/: benchmark_node.cpp
algorithm_benchmark_pkg/launch/: benchmark.launch.py
algorithm_benchmark_pkg/src/: benchmark_node.cpp
algorithm_benchmark_pkg_03/: CMakeLists.txt  package.xml
algorithm_benchmark_pkg_03/config/: joint_limits_constrained.yaml
algorithm_benchmark_pkg_03/launch/: benchmark_constrained.launch.py
algorithm_benchmark_pkg_03/src/: benchmark_node.cpp
algorithm_benchmark_pkg_04/: CMakeLists.txt  package.xml
algorithm_benchmark_pkg_04/launch/: benchmark_optimization.launch.py
algorithm_benchmark_pkg_04/src/: benchmark_node_04.cpp
compare_planner_pkg/: CMakeLists.txt  package.xml
compare_planner_pkg/launch/: run_comparison.launch.py
compare_planner_pkg/src/: compare_algorithms.cpp
fairino16_v6_moveit2_config/config/: fairino16_v6_robot.ros2_control.xacro  fairino16_v6_robot.srdf  fairino16_v6_robot.urdf.xacro  initial_positions.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
fairino16_v6_moveit2_config/launch/: demo.launch.py  move_group.launch.py
mtc_tutorial/: package.xml
mtc_tutorial/launch/: pick_place_demo.launch.py
mtc_tutorial/src/: mtc_tutorial.cpp  mtc_tutorial_debug.cpp
my_deburring_pkg/: CMakeLists.txt  package.xml
my_deburring_pkg/launch/: run_planner.launch.py
my_deburring_pkg/src/: multi_point_planner.cpp
planner_benchmark_pkg/: CMakeLists.txt  package.xml  plot_results.py
planner_benchmark_pkg/launch/: run_benchmark.launch.py
planner_benchmark_pkg/src/: benchmark_node.cpp
大回环问题解决日志/: all_benchmark_data_constrain.csv  all_benchmark_data_noik.csv  benchmark_03_constrained_results.csv  benchmark_03_results.csv  benchmark_04_optimized_ik_results.csv  benchmark_final_results.csv  benchmark_no_ik_results.csv  benchmark_results.csv  extract_data.py  extract_log_data.py  plot_results.py
大回环问题解决日志/chushi rizhi/: run03.txt  run04.txt  run05.txt  run06.txt  run07.txt  run08.txt  run09.txt  run1.txt  run10.txt  run11.txt  run12.txt  run13.txt  run14.txt  run15.txt  run2.txt
大回环问题解决日志/final log/: all_benchmark_data_final.csv  run01.txt  run02.txt  run03.txt  run04.txt  run05.txt  run06.txt  run07.txt  run08.txt  run09.txt  run10.txt  run11.txt  run12.txt  run13.txt  run14.txt  run15.txt
大回环问题解决日志/ik constrained log/: run01.txt  run02.txt  run03.txt  run04.txt  run05.txt  run06.txt  run07.txt  run08.txt  run09.txt  run10.txt  run11.txt  run12.txt  run13.txt  run14.txt  run15.txt  run16.txt  run17.txt  run18.txt  run19.txt  run20.txt
大回环问题解决日志/yunxing rizhi/: all_benchmark_data.csv  run10.txt  run3.txt  run4.txt  run5.txt  run6.txt  run7.txt  run8.txt  run9.txt
